--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "daisyui": "^2.43.2",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
