--- a/angular.json
+++ b/angular.json
@@ -66,6 +66,7 @@
             },
             "development": {
               "browserTarget": "visualizacion-cursos:build:development"
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
